syntax = "proto3";

package proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/euforic/opentable/otpb";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = true;


message Resturant {
  string id = 1 [(gogoproto.customname) = "ID"];
  string name = 2;
  string url = 3 [(gogoproto.customname) = "URL"];
  string recommended = 4;
  repeated Reservation reservations = 5;
}

message Reservation {
  google.protobuf.Timestamp time = 1 [(gogoproto.stdtime) = true];
  string url = 2;
}

message SearchReq {
  string people = 1;
  google.protobuf.Timestamp time = 2 [(gogoproto.stdtime) = true];
  string latitude = 3;
  string longitude = 4;
  string term = 5;

  enum Sort {
    RATING = 0;
    DISTANCE = 1;
    POPULARITY = 2;
    NAME = 3;
  }
  Sort sort = 6;
  map<string,string> opts = 7;
  string user_agent = 8;
}

message SearchRes {
  repeated Resturant resturants = 1;
}

service OTService {
  rpc Search (SearchReq) returns (SearchRes) {}
}
